<resources>
    <string name="app_name">Kotlin task</string>
    <string name="title_home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="open_map">Open map</string>
    <string name="title_app_settings">App settings</string>
    <string name="title_language">Language</string>
    <string name="title_language_selected">English</string>
    <string name="title_pin_code">PIN code</string>
    <string name="title_pin_code_selected">Disable</string>
    <string name="title_button">Authorize</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="_1_place">1.place</string>
    <string name="place">Place</string>
    <string name="settings">Settings</string>
    <string name="title_actionbar_home" />
</resources>