<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f7"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/app_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app_settings"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_first_container"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/app_settings">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/title_language"/>
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginTop="1dp"
            android:layout_width="24dp"
            android:layout_height="14dp"
            android:src="@drawable/flag"/>
        <TextView
            android:id="@+id/select_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:drawablePadding="-4dp"
            android:textSize="18dp"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/title_language_selected"
            android:textColor="@color/black"
            android:gravity="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_last_container"
        android:padding="12dp"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/language">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/title_pin_code"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:drawablePadding="-10dp"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/title_pin_code_selected"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/authorizeBtn"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:text="@string/title_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/pin_code"
        android:background="@drawable/custom_button_settings"
        />
</androidx.constraintlayout.widget.ConstraintLayout>